# kernel-research

./: CONTRIBUTING.md  Doxyfile  README.md
.github/: header-checker-lint.yml
Documentation/: README.md  how_to_get_started.md  introduction.md  kxdb_database.md  kxdb_file_format.txt  sample_exploit.md
docs/: .gitignore  Doxyfile  README.md  how_to_get_started.md  introduction.md  kxdb_database.md  kxdb_file_format.txt  relocations.md  sample_exploit.md
expkit/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_hack.h  build_samples.sh  run_tests.sh
expkit/cmake/: kernelXDKConfig.cmake.in
expkit/include/kernelXDK/: core.h  postrip.h
expkit/include/kernelXDK/kpwn/: Kpwn.h
expkit/include/kernelXDK/payloads/: Payload.hpp  PayloadBuilder.h  PayloadBuilder.hpp  RopChain.h  RopChain.hpp
expkit/include/kernelXDK/pivot/: PivotFinder.hpp  Pivots.hpp  StackPivot.hpp  StackShiftInfo.h
expkit/include/kernelXDK/rip/: RopUtils.h
expkit/include/kernelXDK/util/: error.h  error.hpp  pwn_utils.hpp  str.hpp  syscalls.hpp
expkit/include/kernelXDK/xdk_device/: xdk_device.h
expkit/include/kernelXDK/xdk_device/include/: xdk_device.h
expkit/kpwn/: Kpwn.cpp  Kpwn.hpp
expkit/payloads/: Payload.cpp  Payload.h  Payload.hpp  PayloadBuilder.cpp  PayloadBuilder.h  PayloadBuilder.hpp  RopChain.cpp  RopChain.h  RopChain.hpp
expkit/pivot/: Pivot.cpp  PivotFinder.cpp  PivotFinder.hpp  Pivots.cpp  Pivots.hpp  StackPivot.cpp  StackPivot.h  StackPivot.hpp  StackShiftInfo.cpp
expkit/rip/: RopUtils.cpp  RopUtils.hpp
expkit/samples/: CMakeLists.txt
expkit/samples/exp111/: Makefile  exp.sh  exploit.cpp
expkit/samples/exp151/: CMakeLists.txt  Makefile  exploit.cpp  set.h  setelem.h  table.h
expkit/samples/exp65/: Makefile  exp.sh  exploit.cpp
expkit/samples/exp93_98/: Makefile  exploit.cpp
expkit/samples/exp_93_98_hex48/: Makefile  exploit.cpp
expkit/samples/stack_pivot_and_rop/: Makefile  exp.cpp  exploit.cpp
expkit/test/: CMakeLists.txt  TargetDbTests.cpp  TestEnvironment.cpp  TestEnvironment.h  TestEnvironment.hpp  TestRunner.cpp  TestRunner.h  TestRunner.hpp  TestSuite.cpp  TestSuite.hpp  TestUtils.cpp  TestUtils.h  TestUtils.hpp  check_test_run.py  main.cpp
expkit/test/artifacts/: .gitignore  target_db_lts-6.1.81.kpwn  target_db_lts-6.1.81.kxdb
expkit/test/artifacts/expected_results/: PivotTests_findsPivotsForLts6181.txt
expkit/test/kpwn/: Kpwn.cpp  kpwn.h
expkit/test/kpwn/include/: kpwn.h
expkit/test/logging/: PrintfLogger.cpp  PrintfLogger.h  PrintfLogger.hpp  TapLogger.cpp  TapLogger.h  TapLogger.hpp  TestLogger.cpp  TestLogger.hpp
expkit/test/tests/: KpwnTests.cpp  KpwnTests.h  KpwnTests.hpp  PivotTests.cpp  PivotTests.h  PivotTests.hpp  RopActionTests.cpp  RopActionTests.h  RopActionTests.hpp  SymbolsTests.cpp  SymbolsTests.h  SymbolsTests.hpp  TargetDbTests.cpp  TargetDbTests.h  TargetDbTests.hpp  XdkDeviceTests.h
expkit/util/: ArgumentParser.cpp  ArgumentParser.hpp  HexDump.cpp  HexDump.hpp  Payload.cpp  Register.cpp  Register.hpp  RopChain.cpp  error.cpp  error.hpp  file.cpp  file.hpp  incbin.cpp  log.cpp  math_utils.cpp  math_utils.hpp  pwn_utils.cpp  pwn_utils.hpp  stdutils.cpp  stdutils.hpp  str.cpp  str.hpp  syscalls.cpp  syscalls.hpp
expkit/xdk_device/: xdk_device.cpp
image_db/: README.md  collect_runtime_data.sh  download_release.sh  extract_structures.py  kernel_pages.py  releases.yaml
image_runner/: README.md  compile_custom_modules.sh  guestfish_script  multi_runner.py  run.sh  run_vmlinuz.sh  update_rootfs_image.sh
kernel-image-db/: .gitignore  README.md  collect.sh  collect_runtime_data.sh  download_release.sh  extract-ikconfig  extract_structures.py  releases.yaml
kernel-image-runner/: .gitignore  README.md  compile_custom_modules.sh  download_release.sh  multi_runner.py  run.sh  run_vmlinuz.sh  update_rootfs_image.sh
kernel_rop_generator/: README.md  angrop_rop_generator.py  gadget_filter.py  gadget_finder.py  kernel_syscall_patcher.py  pivot_finder.py  pivot_serializer.py  pivots.py  requirements.txt  rop_action_serializer.py  rop_chain.py  rop_instruction_patcher.py  rop_ret_patcher.py  rop_samples.py  rop_util.py
kpwn_db/: .gitignore  README.md  kpwn_db.py  kpwn_db_generator.py  kpwn_file_format.txt  requirements.txt
kpwn_db_generator/: .gitignore  README.md  binary_writer.py  config.py  data_model.py  image_db_target.py  kpwn_db_generator.py  kpwn_file_format.txt  kpwn_writer.py  rop_actions.py  stack_pivots.py  symbols.py  target.py
kxdb_tool/: README.md  config.py  kxdb_file_format.txt  kxdb_tool.py  test.sh
libxdk/: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  build_samples.sh  run_local_tests.sh  run_tests.sh
libxdk/samples/: CMakeLists.txt
libxdk/samples/exp111/: Makefile  exploit.cpp
libxdk/samples/exp151/: CMakeLists.txt  Makefile  exp.sh  exploit.cpp  obj.h  set.h  setelem.h  table.h
libxdk/samples/exp65/: Makefile  exploit.cpp
libxdk/samples/exp93_98/: Makefile  exp.sh  exploit.cpp
libxdk/samples/pipe_buf_rop/: Makefile  exploit.cpp
libxdk/samples/stack_pivot_and_rop/: Makefile  exploit.cpp
libxdk/test/: CMakeLists.txt  TestEnvironment.cpp  TestEnvironment.h  TestRunner.cpp  TestRunner.h  TestSuite.cpp  TestSuite.h  TestUtils.cpp  TestUtils.h  check_test_run.py  main.cpp
libxdk/test/artifacts/: .gitignore  target_db_lts-6.1.81.kxdb
libxdk/test/artifacts/expected_results/: PivotTests_findsPivotsForLts6181.txt
libxdk/test/logging/: PrintfLogger.cpp  PrintfLogger.h  TapLogger.cpp  TapLogger.h  TestLogger.h
libxdk/test/tests/: PivotTests.h  RopActionTests.h  SymbolsTests.h  TargetDbTests.h  UtilsRuntimeTests.h  UtilsTests.h  XdkDeviceTests.h
rop_generator/: README.md  angrop_rop_generator.py  gadget_filter.py  gadget_finder.py  pivot_finder.py  requirements.txt  rop_instruction_patcher.py  rop_samples.py  rop_util.py
scripts/: .gitignore  db_add_missing_releases.sh  db_get_missing_releases.sh  db_merge.sh  db_process_release.sh  db_upgrade.sh  db_upgrade_config.sh  skipped_releases.txt  update_kpwn_db.sh
source/: conf.py  generate_api_rst.py  index.rst  (+1 more)
(+224 files in other folders)
